--- a/src/app/component/signup/signup.component.html
+++ b/src/app/component/signup/signup.component.html
@@ -1,13 +1,48 @@
 
 
-<div *ngIf="cabAgencySignUpError && isErrorThrown" class="m-5 alert alert-danger">
-    <div *ngFor="let error of getSignupErrorMessage()">
-      <p>{{error.key}}: {{error.value}}</p>
+<!-- <div *ngIf="cabAgencySignUpError && isErrorThrown && cabAgencySignUpErrorList.length==1 " class="m-5 alert alert-danger">
+    <div *ngFor="let error of  cabAgencySignUpErrorList">
+      <p> {{error}}</p>
+    </div>
+  </div> -->
+
+  <div *ngIf="cabAgencySignUpError && isErrorThrown  " class="m-5 alert alert-danger">
+    <div *ngFor="let error of  getSignupErrorMessage()">
+      <p> {{error.value}}</p>
     </div>
   </div>
+<!-- 
+  <div *ngIf="cabAgencySignUpError && isErrorThrown" class="m-5 alert alert-danger">
+    <ng-container *ngIf="cabAgencySignUpError instanceof Array; else singleError">
+      <ul>
+        <li *ngFor="let error of cabAgencySignUpError">{{ error }}</li>
+      </ul>
+    </ng-container>
+    <ng-template #singleError>
+      <p>{{ cabAgencySignUpError }}</p>
+    </ng-template>
+  </div> -->
 
-<div *ngIf="!isErrorThrown">
-    <div class="pt-3"*ngIf="role==='cabAgency'" class="container">
+ 
+
+  <!-- *ngIf="!isErrorThrown" -->
+
+
+<!-- <div *ngIf="cabAgencySignUpError && isErrorThrown && cabAgencySignUpError.length >= 2" class="m-5 alert alert-danger">
+  <ul>
+    <li *ngFor="let errorObj of cabAgencySignUpError; let i = index">
+      <p>{{ i + 1 }}. Error:</p>
+      <ul>
+        <li *ngFor="let key of Object.keys(errorObj)">
+          <span>{{ key }}: {{ errorObj[key] }}</span>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</div> -->
+
+<div >
+    <div class="pt-3"*ngIf="role==='cabAgency' && !setSignupCabAgencySuccessful" class="container">
 
         <div class="row">
     
@@ -15,46 +50,57 @@
     
             </div>
             <div class="pt-5 col-4">
-                <h1>Register Your Cab Agency</h1>
-                <form   id="form-driver-signup">  
-                    <div class="mb-3">
-                        <label class="form-label">Cab Agency Id</label>
-                        <input type="text"  class="form-control" name="cabAgencydId" id="cabAgencyId" [(ngModel)]="cabAgency.cabAgencyId">
-                    </div>
+                <h2>Cab Agency Registration</h2>
+                 <form   id="form-driver-signup" #signupForm="ngForm" (ngSubmit)="cabAgencySignup()" novalidate>  
+                   
                    <div class="mb-3"> 
                     <label class="form-label">Cab Agency name</label>
-                    <input type="text"  class="form-control" name="cabAgencyName" id="cabAgencyName" [(ngModel)]="cabAgency.cabAgencyName">
+                    <input type="text" required  class="form-control" name="cabAgencyName" id="cabAgencyName" [(ngModel)]="cabAgency.cabAgencyName"  #cabAgencyNameInput="ngModel">
+                    <div *ngIf="cabAgencyNameInput.invalid && (cabAgencyNameInput.dirty || cabAgencyNameInput.touched)" class="invalid-feedback">
+                        Cab Agency Name is required.
+                    </div>
                    </div>
             
                    <div class="mb-3">
                     <label class="form-label">Cab Agency MobileNumber</label>
-                    <input type="text" class="form-control" name="cabAgencyMobileNumber" id="cabAgencyMobileNumber" [(ngModel)]="cabAgency.cabAgencyMobileNumber">
-                   </div>
+                    <input type="text" required #cabAgencyMobileNumberInput="ngModel" class="form-control" name="cabAgencyMobileNumber" id="cabAgencyMobileNumber" pattern="[0-9]{10}" title="Please enter a 10-digit mobile number (0-9) without spaces or special character" [(ngModel)]="cabAgency.cabAgencyMobileNumber">
+                    <div *ngIf="cabAgencyMobileNumberInput.invalid && (cabAgencyMobileNumberInput.dirty || cabAgencyMobileNumberInput.touched)" class="invalid-feedback">
+                        Cab Agency Mobile Number is required.
+                    </div>
+                </div>
             
                    <div class="mb-3">
                     <label class="form-label">Cab Agency Email</label>
-                    <input type="email" class="form-control" name="cabAgencyEmail" id="cabAgencyEmail" [(ngModel)]="cabAgency.cabAgencyEmail">
+                    <input type="email" required #cabAgencyEmailInput="ngModel" class="form-control" name="cabAgencyEmail" id="cabAgencyEmail" [(ngModel)]="cabAgency.cabAgencyEmail" >
+                    <div *ngIf="cabAgencyEmailInput.invalid && (cabAgencyEmailInput.dirty || cabAgencyEmailInput.touched)" class="invalid-feedback">
+                        Cab Agency Email is required.
+                    </div>
                    </div>
             
                    <div class="mb-3">
                     <label class="form-label">Cab Agency Password</label>
-                    <input type="password" class="form-control" name="cabAgencyPassword" id="cabAgencyPassword" [(ngModel)]="cabAgency.cabAgencyPassword">
+                    <input type="password" required #cabAgencyPasswordInput="ngModel" class="form-control" name="cabAgencyPassword" id="cabAgencyPassword" [(ngModel)]="cabAgency.cabAgencyPassword">
+                    <div *ngIf="cabAgencyPasswordInput.invalid && (cabAgencyPasswordInput.dirty || cabAgencyPasswordInput.touched)" class="invalid-feedback">
+                        Cab Agency Password is required.
+                    </div>
                 
                    </div>
                     
                 
-                    <button (click)="cabAgencySignup()">register now</button>
+                    <!-- <button (click)="cabAgencySignup()">register now</button> -->
+                    <button type="submit" [disabled]="signupForm.invalid" class="btn btn-primary">Register</button>
+
                    
                 </form>
             
             
-    
+            
             </div>
         </div>
     
     </div>
     
-    <div *ngIf="role==='customer'" class="container">
+    <div *ngIf="role==='customer' " class="container">
     
     
         <div class="row">
@@ -99,21 +145,18 @@
         </div>
     
     
-    
-    
-    
-    
-    
-        
-    
-        
-    
-        
-    
-    
-    
-    
-    
+    </div>
+
+
+
+
+
+
+
+    <div class="success-message" *ngIf="setSignupCabAgencySuccessful">
+        <h1>Cab Agency registered successfully</h1>
+        <span>Your ID: {{registeredCabAgency.cabAgencyId}}</span>
+        <span>Go to <a [routerLink]="['/login','cabAgency']">Login page</a></span>
     </div>
 </div>
 
